# crush

./: .gitignore  API_STUDIO_PLAN.md  CRUSH_V2_PLAN.md  CRUSH_V4_PLAN.md  CRUSH_V8_PLAN.md  Cargo.toml  GATEWAY_DESIGN.md  GUI_DATA_CONTRACT.md  LOCAL_DB_STUDIO_PLAN.md  LOCAL_PAAS_PLAN.md  LOCAL_STORAGE_STUDIO_PLAN.md  PARITY_PLAN.md  README.md  RELIABILITY_AND_PARITY_PLAN.md  RUNTIME_BUNDLING_PLAN.md  SERVERS_DB_STORAGE_OVERHAUL.md  SPEED_PLAN.md  _setup_gui.ps1  _v8_alpha.ps1  appveyor.yml  cliff.toml  deny.toml  vercel.json
.zed/: settings.json
benches/: build_pipeline.rs  container_startup.rs  image_extraction.rs
crates/crush-ai/: Cargo.toml
crates/crush-ai/src/: ai_client.rs  autofix.rs  build_errors.rs  diagnose.rs  history.rs  lib.rs  offline.rs  parsers.rs  parsers_ext.rs  patterns.json  provider.rs  source.rs
crates/crush-ai/tests/: parser_test.rs
crates/crush-api/: Cargo.toml
crates/crush-api/src/: lib.rs
crates/crush-apispec/: Cargo.toml
crates/crush-apispec/src/: lib.rs
crates/crush-build/: Cargo.toml
crates/crush-build/src/: attest.rs  cache.rs  cross.rs  crushfile.rs  dbsnapshot.rs  deploy_targets.rs  depstate.rs  detect.rs  diagnose.rs  env.rs  gateway.rs  ignore.rs  lib.rs  lint.rs  localca.rs  mailbox.rs  mobile.rs  multiservice.rs  parser.rs  pipeline.rs  portcheck.rs  progress.rs  proxy.rs  run.rs  sbom.rs  secrets.rs  service_orchestrator.rs  simulate.rs  ssh.rs  stages.rs  tunnel.rs  version.rs
crates/crush-build/src/analysis/: fixer.rs  mod.rs  report.rs  secrets.rs  sqli.rs  vulns.rs
crates/crush-cli/: Cargo.toml
crates/crush-cli/src/: job_object.rs  main.rs  proxy.rs  runtime.rs
crates/crush-cli/src/commands/: build.rs  ci.rs  db.rs  mod.rs  run.rs  ssh.rs
crates/crush-cli/tests/: integration_test.rs
crates/crush-compat/: Cargo.toml
crates/crush-compat/src/: api.rs  compose.rs  convert.rs  creds.rs  dockerfile.rs  lib.rs  migrate.rs
crates/crush-compat/tests/: compose_honor_test.rs
crates/crush-deploy/: Cargo.toml
crates/crush-deploy/src/: aws.rs  bluegreen.rs  digitalocean.rs  fly.rs  gcp.rs  hetzner.rs  lib.rs  provider.rs  railway.rs  ssh.rs  state.rs
crates/crush-doctor/: Cargo.toml
crates/crush-doctor/src/: check.rs  lib.rs  registry.rs
crates/crush-doctor/src/checks/: build_tools.rs  manifest_drift.rs  mod.rs  toolchain.rs
crates/crush-ebpf-progs/: Cargo.toml
crates/crush-ebpf-progs/src/: main.rs
crates/crush-gui/src-tauri/: Cargo.toml  tauri.conf.json
crates/crush-gui/src-tauri/capabilities/: default.json
crates/crush-gui/src-tauri/icons/: gen_icons.mjs  icon.icns  make_icon_src.mjs
crates/crush-gui/src-tauri/src/: events.rs  lib.rs  main.rs  state.rs
crates/crush-gui/src-tauri/src/commands/: ai.rs  api.rs  build.rs  config.rs  containers.rs  database.rs  deploy.rs  deployments.rs  device.rs  eject.rs  env.rs  gateway.rs  git.rs  images.rs  inspect.rs  logs.rs  mailbox.rs  mod.rs  platform.rs  run_cmd.rs  servers.rs  services.rs  storage.rs  system.rs  tunnel.rs
crates/crush-gui/src-tauri/src/platform/: mod.rs  unix.rs  windows.rs
crates/crush-image/: Cargo.toml
crates/crush-image/src/: blob.rs  compress.rs  db.rs  fuse.rs  gc.rs  layer.rs  lazy.rs  lib.rs  multiarch.rs
crates/crush-image/tests/: integration_test.rs  layer_test.rs
crates/crush-network/: Cargo.toml  build.rs
crates/crush-network/src/: bridge.rs  cni.rs  dns.rs  ebpf.rs  ipv6.rs  lib.rs  modes.rs  nat.rs  netns.rs  networks.rs  portmap.rs  veth.rs
crates/crush-proto/: Cargo.toml
crates/crush-proto/src/: lib.rs
crates/crush-registry/: Cargo.toml
crates/crush-registry/src/: auth.rs  lib.rs
crates/crush-registry/tests/: auth_test.rs  client_test.rs
crates/crush-reliability/: Cargo.toml
crates/crush-reliability/src/: apparmor.rs  audit.rs  health.rs  lib.rs  oom.rs  readonly.rs  restart.rs  rootless.rs  secrets.rs  selinux.rs
crates/crush-runtime-linux/: Cargo.toml
crates/crush-runtime-linux/src/: capabilities.rs  cgroup.rs  devices.rs  lib.rs  lifecycle.rs  namespace.rs  overlay.rs  runner.rs  seccomp.rs  signals.rs  user_ns.rs
crates/crush-runtime-linux/tests/: runner_test.rs
crates/crush-runtime-macos/: Cargo.toml
crates/crush-runtime-macos/src/: bindings.rs  boot.rs  console.rs  fs.rs  image.rs  lib.rs  network.rs  port_forward.rs  rosetta.rs  sandbox.rs  storage.rs  vm.rs  vsock.rs
crates/crush-runtime-wasm/: Cargo.toml
crates/crush-runtime-wasm/src/: component.rs  engine.rs  image.rs  lib.rs  limits.rs  network.rs  router.rs  wasi.rs
crates/crush-runtime-windows/: Cargo.toml
crates/crush-runtime-windows/src/: conpty.rs  creds.rs  ext4_cache.rs  firecracker.rs  fs_sandbox.rs  hcs.rs  hns.rs  job_control.rs  lib.rs  process.rs  service.rs  snapshot.rs  vm_pool.rs
crates/crush-services/: Cargo.toml
crates/crush-services/src/: binary_cache.rs  driver.rs  lib.rs  minio.rs  mongodb.rs  mysql.rs  postgres.rs  redis_compat.rs  state.rs
crates/crush-services/src/extensions/: pgvector.rs
crates/crush-toolchain/: Cargo.toml
crates/crush-toolchain/src/: activate.rs  download.rs  lib.rs  resolve.rs
crates/crush-tui/: Cargo.toml
crates/crush-tui/src/: completions.rs  lib.rs  manpages.rs  tui.rs  watch.rs
crates/crush-tui/tests/: watch_test.rs
crates/crush-types/: Cargo.toml
crates/crush-types/src/: catalog.rs  lib.rs
crates/crush-volume/: Cargo.toml
crates/crush-volume/src/: backup.rs  bind.rs  driver.rs  lib.rs  lifecycle.rs  local.rs  mount.rs  named.rs  quota.rs  tmpfs.rs  windows.rs
crates/crush-volume/tests/: volume_test.rs
crush-web/: .gitignore  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  vercel.json  vite.config.ts
docs/: book.toml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: compose.rs  crushfile.rs  dockerfile.rs  oci_manifest.rs
installer/: crush-setup.nsi
scripts/: build-desktop.ps1  build-installer.ps1  ci-local.sh  install.ps1  install.sh  release-cli.sh  release-desktop.sh  release-local.sh  release-windows.ps1  release.sh  release_notes_v2.md  release_notes_v3.md  release_notes_v4.md
(+157 files in other folders)
