[package]
name = "crush-build"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Crush build system — layered image construction, content-addressed cache, parallel stages, SBOM, SLSA"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
toml = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
crush-types = { workspace = true }
crush-image = { workspace = true }
crush-services = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
zstd = { workspace = true }
tar = { workspace = true }
flate2 = { workspace = true }
regex = "1.10"
walkdir = "2.5"
ignore = "0.4"
indicatif = "0.17"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.13", features = ["v4"] }
rayon = "1.10"
futures = { workspace = true }
reqwest = { workspace = true }
notify = "6"

hyper = { version = "1", features = ["server", "client", "http1"] }
hyper-util = { version = "0.1", features = ["tokio", "server-auto", "client-legacy", "http1"] }
http-body-util = "0.1"
bytes = "1"

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.52", features = [
    "Win32_System_Threading",
    "Win32_Foundation",
] }

[dev-dependencies]
tempfile = "3"
