[package]
name = "crush-build"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Crush build system — layered image construction, content-addressed cache, parallel stages, SBOM, SLSA"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
toml = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
crush-types = { workspace = true }
crush-image = { workspace = true }
crush-services = { workspace = true }
crush-compat = { workspace = true }
crush-reliability = { workspace = true }
tokio-postgres = "0.7"
sha2 = { workspace = true }
hex = { workspace = true }
zstd = { workspace = true }
tar = { workspace = true }
flate2 = { workspace = true }
regex = "1.10"
dirs = "5.0"
walkdir = "2.5"
ignore = "0.4"
indicatif = "0.17"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.13", features = ["v4"] }
rayon = "1.10"
futures = { workspace = true }
reqwest = { workspace = true }
notify = "6"
glob = "0.3"

hyper = { version = "1", features = ["server", "client", "http1", "http2"] }
hyper-util = { version = "0.1", features = ["tokio", "server-auto", "client-legacy", "http1", "http2"] }
http-body-util = "0.1"
bytes = "1"
rustls = { version = "0.23", features = ["ring"] }
tokio-rustls = { version = "0.26" }
rustls-pemfile = "2.1"
instant-acme = "0.6"
rcgen = { version = "0.13", features = ["x509-parser", "pem"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.52", features = [
    "Win32_System_Threading",
    "Win32_System_JobObjects",
    "Win32_Foundation",
    "Win32_NetworkManagement_IpHelper",
    "Win32_Networking_WinSock",
] }

[dev-dependencies]
tempfile = "3"
