[package]
name = "crush-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Flagship CLI binary for the Crush container runtime"

[dependencies]
tokio = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde_json = { workspace = true }
crush-types = { workspace = true }
crush-build = { workspace = true }
crush-image = { workspace = true }
crush-compat = { workspace = true }
crush-ai = { workspace = true }
crush-tui = { workspace = true }
crush-api = { workspace = true }
crush-registry = { workspace = true }
crush-network = { workspace = true }
crush-reliability = { workspace = true }
crush-volume = { workspace = true }
dirs = "5.0"
libc = "0.2"
clap_complete = "4.5"
async-trait.workspace = true
serde = { workspace = true, features = ["derive"] }

[target.'cfg(target_os = "linux")'.dependencies]
crush-runtime-linux = { workspace = true }
