[package]
name = "crush-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Flagship CLI binary for the Crush container runtime"

[dependencies]
tokio = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde_json = { workspace = true }
crush-types = { workspace = true }
crush-build = { workspace = true }
crush-image = { workspace = true }
crush-services = { workspace = true }
crush-compat = { workspace = true }
crush-ai = { workspace = true }
crush-tui = { workspace = true }
crush-api = { workspace = true }
crush-registry = { workspace = true }
crush-reliability = { workspace = true }
crush-volume = { workspace = true }
dirs = "5.0"
libc = "0.2"
rpassword = "7"
clap_complete = "4.5"
which = "6"
async-trait.workspace = true
serde = { workspace = true, features = ["derive"] }
reqwest = { workspace = true }
tempfile = "3"
chrono = { version = "0.4", features = ["serde"] }
sha2 = { workspace = true }
crush-deploy = { workspace = true }
owo-colors = { version = "4.1", features = ["supports-colors"] }
hyper = { version = "1", features = ["server", "client", "http1"] }
hyper-util = { version = "0.1", features = ["tokio", "server-auto", "client-legacy", "http1"] }
http-body-util = "0.1"
bytes = "1"
futures = "0.3"

[target.'cfg(target_os = "linux")'.dependencies]
crush-runtime-linux = { workspace = true }
crush-network = { workspace = true }

[target.'cfg(target_os = "windows")'.dependencies]
crush-runtime-windows = { workspace = true }
winreg = { workspace = true }
windows-sys = { version = "0.52", features = [
    "Win32_System_Threading",
    "Win32_Foundation",
    "Win32_System_ProcessStatus",
    "Win32_System_JobObjects",
    "Win32_UI_WindowsAndMessaging"
] }

