[package]
name = "crush-compat"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Docker compatibility — Dockerfile/compose parsing, API server, credential helpers, migration"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
crush-types = { workspace = true }
crush-build = { workspace = true }
crush-image = { workspace = true }
toml = { workspace = true }
regex = "1.10"
indexmap = "2.5"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.13", features = ["v4"] }
