[package]
name = "crush-deploy"
version.workspace = true
edition.workspace = true

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
crush-types = { workspace = true }
crush-build = { workspace = true }
ssh2 = { workspace = true }
dirs = "5.0"
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
jsonwebtoken = "9"
