[package]
name = "crush-doctor"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "System diagnostics and check registry"

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
async-trait.workspace = true
tokio.workspace = true
