[package]
name = "crush-image"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "OCI image store, layer management, zstd compression, and lazy FUSE loading"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
crush-types = { workspace = true }
crush-registry = { workspace = true }
tar = { workspace = true }
zstd = { workspace = true }
flate2 = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
rayon = { workspace = true }
reqwest = { workspace = true }
tokio-util = { workspace = true }
sled = { workspace = true }
lru = "0.12"
base64 = "0.22"

[target.'cfg(not(target_os = "windows"))'.dependencies]
fuser = "0.14"
libc = "0.2"

[dev-dependencies]
tempfile = "3.10"


