[package]
name = "crush-network"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Container networking bridges, veth allocations, port mappings, eBPF, and DNS"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
crush-types = { workspace = true }
nix = { version = "0.28", features = ["net", "sched"] }
libc = "0.2"
ipnetwork = "0.20"
pnet = "0.35"
rtnetlink = "0.14"
netlink-packet-core = "0.7"
netlink-packet-route = "0.19"
hickory-resolver = "0.25"
hickory-server = "0.25"
hickory-proto = "0.25"
aya = { version = "0.12", optional = true }
aya-obj = { version = "0.2", optional = true }
aya-log = { version = "0.2", optional = true }
sled = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }

[features]
default = []
ebpf = ["aya", "aya-obj", "aya-log"]
