[package]
name = "crush-runtime-macos"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "macOS sandbox backend using Virtualization.framework, Rosetta 2 and vmnet"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
crush-types = { workspace = true }
uuid = { version = "1.13", features = ["v4"] }
sha2 = { workspace = true }
hex = { workspace = true }
zstd = { workspace = true }
flate2 = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = "0.3"
block2 = "0.6"
core-foundation = "0.10"
