[package]
name = "crush-runtime-wasm"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "First-class WASM sandbox backend using wasmtime and WASI preview 2"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
crush-types = { workspace = true }
wasmtime = { version = "30.0", features = ["async", "cranelift"] }
wasmtime-wasi = "30.0"
wasmtime-wasi-http = "30.0"
cap-std = "4.0"
wit-bindgen = "0.43"
wit-component = "0.43"
sha2 = { workspace = true }
hex = { workspace = true }
