[package]
name = "crush-runtime-wasm"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "First-class WASM sandbox backend using wasmtime and WASI preview 2"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
crush-types = { workspace = true }
wasmtime = { version = "45.0", features = ["async", "cranelift", "component-model"] }
wasmtime-wasi = "45.0"
wasmtime-wasi-http = "45.0"
cap-std = "4.0"
sha2 = { workspace = true }
hex = { workspace = true }
