[package]
name = "crush-runtime-windows"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Windows sandbox backend using Job Objects, WFP networking, and Firecracker microVM"

[dependencies]
tokio = { workspace = true, features = ["sync", "process", "io-util"] }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
crush-types = { workspace = true }
libloading = "0.8"
uuid = { version = "1.8", features = ["v4", "serde"] }
reqwest = { workspace = true }

# Windows crate for HCS/HNS high-level bindings
windows = { version = "0.52", features = [
    "Win32_System_HostComputeSystem",
    "Win32_System_HostComputeNetwork"
] }

# Windows-sys crate for direct, unsafe Win32 API calls
windows-sys = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_System_JobObjects",
    "Win32_System_Threading",
    "Win32_System_SystemServices",
    "Win32_Security",
    "Win32_Security_Cryptography",
    "Win32_Storage_FileSystem",
    "Win32_System_Console",
    "Win32_System_Services"
] }
