[package]
name = "crush-types"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Core types, errors, and traits for the Crush container runtime"

[dependencies]
tokio = { workspace = true, features = ["sync", "time"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
oci-spec = { workspace = true }
async-trait = { workspace = true }
