[package]
name = "crush-volume"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Volume management — named volumes, bind mounts, tmpfs, drivers, quotas, backup/restore"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
crush-types = { workspace = true }
libc = "0.2"

[target.'cfg(target_os = "linux")'.dependencies]
nix = { version = "0.28", features = ["fs", "mount", "user"] }
sled = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
tar = { workspace = true }
flate2 = { workspace = true }
zstd = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.13", features = ["v4"] }
