[package]
name = "crush-gui"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Crush GUI — Tauri 2 desktop frontend"

[lib]
name = "crush_gui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-shell = "2"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
uuid = { version = "1.13", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
rfd = "0.15"
open = "5"
dirs = "6"
png = "0.17"
base64 = "0.22"
sysinfo = "0.33"
tokio-postgres = "0.7"
redis = { version = "0.27", features = ["tokio-comp"] }
mongodb = "3"
aws-sdk-s3 = "1"
crush-types = { workspace = true }
crush-image = { workspace = true }
crush-build = { workspace = true }
crush-services = { workspace = true }
crush-ai = { workspace = true }

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.52", features = [
    "Win32_System_Threading",
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
] }
